--- a/app/data/app.json
+++ b/app/data/app.json
@@ -3,5 +3,6 @@
     "Author": "WareBare",
     "Copyright": "Copyright © 2019 WareBare. All rights reserved.",
     "Email": "warebare89@gmail.com",
+    "DiscordGroup": "https://discord.gg/ru6eU2p",
     "Info2": "Bugreports/Questions on the Forums (t=53066) or GitHub."
 }
