--- a/app/data/tpl_app.json
+++ b/app/data/tpl_app.json
@@ -7,7 +7,9 @@
         "ID": "app_Nav",
         "CONTENT": "myNav",
         "Items":{
-            "News":{}
+            "News":{
+                "Change Log": []
+            }
             , "Filter":{
                 "Settings":[]
                 , "Library":[]
