--- a/app/data/tpl_app.json
+++ b/app/data/tpl_app.json
@@ -16,7 +16,9 @@
                     ".Manage Tags"
                     , ".Manage Groups"
                 ]
-                , ".Library":[]
+                , ".Library":[
+                    ".Special Highlighting"
+                ]
             }
         },
         "Disabled":{
