--- a/app/data/tpl_app.json
+++ b/app/data/tpl_app.json
@@ -18,6 +18,7 @@
                 ]
                 , ".Library":[
                     ".Special Highlighting"
+                    , ".Mastery Marker"
                 ]
             }
         },
